syntax = "proto3";
option go_package = "protocol";

message login_req{
    string name = 1;
}

message login_resp{
    string msg = 1;
}

message file{
    string fileName  = 1;
    bool   next      = 2;
    bytes  b         = 3;
    int32  length    = 4;
}

message Start_req{
    string args = 1;
    int32  itemID = 2;
}

message Start_resp{
    string msg = 1;
}

enum signal {
    none = 0;
    term = 1;
    kill = 2;
    user1 = 3;
    user2 = 4;
}

message signal_req{
    int32 itemID = 1;
    signal signal = 2;
}

message signal_resp{
    string msg = 1;
}

/* **** */

message ItemInfo{
    int32  itemID  = 1;
    int32  pid     = 2;
    double cpuUsed = 3;
    double memUsed = 4;
    bool   running = 5;
}

message SysInfo{
    int32  cpuCount        = 1;
    double cpuUsedPercent  = 2;
    string memTotal        = 3;
    string memUsed         = 4;
    double memUsedPercent  = 5;
    string diskTotal       = 6;
    string diskUsed        = 7;
    double diskUsedPercent = 8;
}

message report{
    SysInfo              sys   = 1;
    map<int32,ItemInfo>  items = 2;
}